--- a/SiteCurriculo/public/css/login.css
+++ b/SiteCurriculo/public/css/login.css
@@ -10,10 +10,9 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(https://c.wallhere.com/photos/da/70/digital_art_landscape_illustration_skyline-2285476.jpg!d) no-repeat;
+    background: url('../img/background.png') no-repeat;
     background-size: cover;
     background-position: center;
-    #credits {position: fixed; bottom: 10px; right: 10px; color: rgb(255, 255, 255); font-size: 12px; font-family: Arial, sans-serif;}
   }
   
   .container {
