--- a/SiteCurriculo/public/css/login.css
+++ b/SiteCurriculo/public/css/login.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../img/background.png') no-repeat;
+    background: url('../images/background.png') no-repeat;
     background-size: cover;
     background-position: center;
   }
@@ -112,23 +112,5 @@
   
   .register-link p a:hover {
     text-decoration: underline;
-  }
-
-  .buttons{
-    display: flex;
-    flex-direction: row;
-  }
-
-  button{
-    margin: 2%;
-  }
-
-  button a{
-    text-decoration: none;
-  }
-
-  button:hover{
-    transition: 0.2s;
-    transform: scale(1.1);
   }
       
