--- a/SiteCurriculo/telas/index.ejs
+++ b/SiteCurriculo/telas/index.ejs
@@ -6,8 +6,14 @@
 
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="../public/img/MALAAZUL.png" type="image/x-icon">
+        <link rel="icon" href="./images/MALAAZUL.png" type="image/x-icon">
         <title>EMPREGA AI</title>
+
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+
+        <link href="./css/bootstrap-icons.css" rel="stylesheet">
+
+        <link href="./css/templatemo-topic-listing.css" rel="stylesheet">  
 
         <!-- ARQUIVOS DO CSS -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,12 +21,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap" rel="stylesheet">
-                        
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
-
-        <link href="css/templatemo-topic-listing.css" rel="stylesheet">      
+                            
     </head>
     
     <body id="top">
@@ -29,8 +30,8 @@
 
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="../public/img/Logo_Emprga_Aí-removebg-preview.png" alt="Logo da Empresa" style="height: 50px;">
+                    <a class="navbar-brand" href="/">
+                        <img src="./images/Logo_Emprga_Aí-removebg-preview.png" alt="Logo da Empresa" style="height: 50px;">
                         <span>Emprega aí</span>
                     </a>
 
@@ -57,8 +58,10 @@
                             </li>
                         </ul>
 
-                        <div class="d-none d-lg-block">
-                            <a href="../login.html" class="navbar-icon bi-person smoothscroll"></a>
+                        <div style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+                            <% if (usuario) { %>
+                                <span>Perfil: <%= usuario.nome %></span> <!-- Exibe o nome do usuário logado -->
+                            <% } %>
                         </div>
                     </div>
                 </div>
@@ -497,11 +500,11 @@
 
 
         <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/click-scroll.js"></script>
-        <script src="js/custom.js"></script>
+        <script src="./js/jquery.min.js"></script>
+        <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/jquery.sticky.js"></script>
+        <script src="./js/click-scroll.js"></script>
+        <script src="./js/custom.js"></script>
 
     </body>
 </html>
