--- a/SiteCurriculo/telas/vagasempresa.ejs
+++ b/SiteCurriculo/telas/vagasempresa.ejs
@@ -161,7 +161,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                 <img src="./images/Logo_Emprga_Aí-removebg-preview.png" alt="Logo da Empresa" style="height: 50px;">
                 <span>Emprega aí</span>
             </a>
@@ -179,7 +179,7 @@
                         <a class="nav-link click-scroll" href="#section_2">Suas Vagas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="contact.html">Nos contate</a>
+                        <a class="nav-link click-scroll" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
