--- a/SiteCurriculo/telas/perfilempresa.ejs
+++ b/SiteCurriculo/telas/perfilempresa.ejs
@@ -103,7 +103,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="./images/Logo_Emprga_Aí-removebg-preview.png" alt="Logo da Empresa" style="height: 50px;">
                     <span>Emprega aí</span>
                 </a>
@@ -125,9 +125,8 @@
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="/vagasempresa">Suas Vagas</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="contact.html">Nos contate</a>
+                            <a class="nav-link click-scroll" href="/logout">Logout</a>
                         </li>
                     </ul>
                 </div>
