--- a/SiteCurriculo/telas/topics-detail.ejs
+++ b/SiteCurriculo/telas/topics-detail.ejs
@@ -45,7 +45,7 @@
                                 <a class="nav-link click-scroll" href="#section_2">Vagas disponíveis</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="contact.html">Nos contate</a>
+                                <a class="nav-link click-scroll" href="/logout">Logout</a>
                             </li>
                         </ul>
                         <div style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
@@ -68,11 +68,6 @@
                                 </ol>
                             </nav>
                             <h2 class="text-white"><%= vaga.titulo %></h2> <!-- Nome da vaga -->
-
-                            <div class="d-flex align-items-center mt-5">
-                                <a href="#topics-detail" class="btn custom-btn custom-border-btn smoothscroll me-4">Sobre</a>
-                                <a href="#top" class="custom-icon bi-bookmark smoothscroll"></a>
-                            </div>
                         </div>
                         <div class="col-lg-5 col-12">
                             <div class="topics-detail-block bg-white shadow-lg">
@@ -107,12 +102,22 @@
                             <img src="/images/rear-view-young-college-student.jpg" class="newsletter-image img-fluid" alt="">
                         </div>
                         <div class="col-lg-5 col-12 subscribe-form-wrap d-flex justify-content-center align-items-center">
-                            <form class="custom-form subscribe-form" action="#" method="post" role="form">
+                            <form class="custom-form subscribe-form" action="/enviar-candidatura" method="post" role="form">
                                 <h4 class="mb-4 pb-2">Gostou da vaga?</h4>
+                            
+                                <!-- Campo oculto para passar o ID da Vaga -->
+                                <input type="hidden" name="id_vaga" value="<%= vaga.id_vaga %>">
+                            
+                                <!-- Campo para o currículo -->
+                                <div class="form-group mb-3">
+                                    <label class="text-center" for="curriculo">Currículo</label><br>
+                                    <textarea id="curriculo" name="curriculo" rows="4" placeholder="Cole seu currículo aqui"></textarea>
+                                </div>
+                            
                                 <div class="col-lg-12 col-12">
                                     <button type="submit" class="form-control">Entregar o currículo</button>
                                 </div>
-                            </form>
+                            </form>                            
                         </div>
                     </div>
                 </div>
