--- a/SiteCurriculo/telas/perfilempresa.ejs
+++ b/SiteCurriculo/telas/perfilempresa.ejs
@@ -194,9 +194,9 @@
                     <select class="form-select" id="categoria" name="categoria" required>
                         <option value="design">Design</option>
                         <option value="marketing">Marketing</option>
-                        <option value="finance">Finance</option>
-                        <option value="music">Música</option>
-                        <option value="education">Educação</option>
+                        <option value="finanças">Finance</option>
+                        <option value="música">Música</option>
+                        <option value="educação">Educação</option>
                     </select>
                 </div>
             
