--- a/SiteCurriculo/telas/vagasempresa.ejs
+++ b/SiteCurriculo/telas/vagasempresa.ejs
@@ -173,10 +173,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-lg-5 me-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_1">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_2">Suas Vagas</a>
+                        <a class="nav-link click-scroll" href="/">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="/logout">Logout</a>
