--- a/SiteCurriculo/telas/index.ejs
+++ b/SiteCurriculo/telas/index.ejs
@@ -78,7 +78,7 @@
 
                             <form method="get" action="/" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
                                 <div class="input-group input-group-lg">
-                                    <input name="keyword" type="search" class="form-control" id="keyword" placeholder="Digite uma categoria! Ex: Design" aria-label="Search">
+                                    <input name="keyword" type="search" class="form-control" id="keyword" placeholder="Digite uma categoria! Ex: Design, Marketing, Educação" aria-label="Search">
                                     <button type="submit" class="form-control">Pesquisar</button>
                                 </div>
                             </form>                            
