--- a/SiteCurriculo/telas/perfilempresa.ejs
+++ b/SiteCurriculo/telas/perfilempresa.ejs
@@ -132,7 +132,7 @@
                 </div>
                 <div style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
                     <% if (usuario) { %>
-                        <span>Empresa: <%= usuario.nome %></span> <!-- Exibe o nome do usuário logado -->
+                        <span>Empresa: <%= usuario.nome %></span> 
                     <% } %>
                 </div>
             </div>
