--- a/SiteCurriculo/telas/topics-detail.ejs
+++ b/SiteCurriculo/telas/topics-detail.ejs
@@ -20,6 +20,14 @@
             .navbar{
                 background-color: rgb(117, 210, 196);
             }
+
+            textarea{
+                border: 2px solid rgb(93, 93, 93);
+                border-radius: 12px;
+                min-height: 200px;
+                min-width: 400px;
+                padding: 10px;
+            }
         </style>
     </head>
     
@@ -111,7 +119,7 @@
                                 <!-- Campo para o currículo -->
                                 <div class="form-group mb-3">
                                     <label class="text-center" for="curriculo">Currículo</label><br>
-                                    <textarea id="curriculo" name="curriculo" rows="4" placeholder="Cole seu currículo aqui"></textarea>
+                                    <textarea id="curriculo"  style="resize: none;" name="curriculo" rows="4" placeholder="Cole seu currículo aqui"></textarea>
                                 </div>
                             
                                 <div class="col-lg-12 col-12">
