--- a/SiteCurriculo/telas/editarvaga.ejs
+++ b/SiteCurriculo/telas/editarvaga.ejs
@@ -97,6 +97,7 @@
             background: #fff;
             border: none;
             outline: none;
+            margin-bottom: 20px;
             border-radius: 5px;
             box-decoration-break: 0px 0px 10px rgba(0, 0, 0, 0.1);
             cursor: pointer;
@@ -121,6 +122,14 @@
             text-decoration: underline;
         }
 
+        .input-box label {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 5px;
+            font-size: 14px;
+            color: #fff;
+        }
+
         textarea {
             width: 100%;
             height: 50px; 
@@ -128,24 +137,16 @@
             border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 5px;
             color: #fff;
-            padding: 20px;
+            padding: 14px;
             font-size: 16px;
-        }
-
-        textarea::placeholder {
-            color: #fff;
+            resize: none;
         }
 
         a {
-            color: #fff;
-            padding: 10px;
-            margin: 20px;
+            color: #333;
+            font-size: 16px;
             text-decoration: none;
             font-weight: 600;
-        }
-
-        a:hover {
-            text-decoration: underline;
         }
 
     </style>
@@ -155,27 +156,33 @@
         <h1>Editar Vaga</h1>
         <form action="/editar-vaga/<%= vaga.id_vaga %>" method="POST">
             <div class="input-box">
+                <label for="titulo">Título</label>
                 <input type="text" id="titulo" name="titulo" value="<%= vaga.titulo %>" required>
             </div>
             <div class="input-box">
+                <label for="descricao">Descrição</label>
                 <textarea id="descricao" name="descricao" required><%= vaga.descricao %></textarea>
             </div>
             <div class="input-box">
+                <label for="cidade">Cidade</label>
                 <input type="text" id="cidade" name="cidade" value="<%= vaga.cidade %>" required>
             </div>
             <div class="input-box">
+                <label for="estado">Estado</label>
                 <input type="text" id="estado" name="estado" value="<%= vaga.estado %>" required>
             </div>
             <div class="input-box">
+                <label for="data_fechamento">Data de Fechamento</label>
                 <input type="date" id="data_fechamento" name="data_fechamento" value="<%= vaga.data_fechamento %>" required>
             </div>
             <div class="input-box">
+                <label for="categoria">Categoria</label>
                 <input type="text" id="categoria" name="categoria" value="<%= vaga.categoria %>" required>
             </div>
-        
+    
             <button type="submit" class="btn">Atualizar Vaga</button>
         </form>    
-        <a href="/vagasempresa">Cancelar</a>
-    </div>
+        <button class="btn"><a href="/vagasempresa">Cancelar</a></button>
+    </div>    
 </body>
 </html>
