--- a/SiteCurriculo/telas/index.ejs
+++ b/SiteCurriculo/telas/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,6 +52,11 @@
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_2">Vagas disponíveis</a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="/inscricoes">Inscrições</a>
+                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="/logout">Logout</a>
                             </li>
@@ -111,7 +116,7 @@
                                 <% }); %>
                             </div>
                         <% } else { %>
-                            <p class="text-white text-center">Faça uma pesquisa de categoria nova para ver as vagas disponíveis!</p>
+                            <p class="text-white text-center">Faça uma nova pesquisa de categoria para ver as vagas disponíveis!</p>
                         <% } %>
                     </div>
                 </div>
@@ -136,13 +141,13 @@
                                 <button class="nav-link" id="marketing-tab" data-bs-toggle="tab" data-bs-target="#marketing-tab-pane" type="button" role="tab" aria-controls="marketing-tab-pane" aria-selected="false">Marketing</button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="finance-tab" data-bs-toggle="tab" data-bs-target="#finance-tab-pane" type="button" role="tab" aria-controls="finance-tab-pane" aria-selected="false">Finance</button>
+                                <button class="nav-link" id="finance-tab" data-bs-toggle="tab" data-bs-target="#finance-tab-pane" type="button" role="tab" aria-controls="finance-tab-pane" aria-selected="false">Finanças</button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="music-tab" data-bs-toggle="tab" data-bs-target="#music-tab-pane" type="button" role="tab" aria-controls="music-tab-pane" aria-selected="false">Music</button>
+                                <button class="nav-link" id="music-tab" data-bs-toggle="tab" data-bs-target="#music-tab-pane" type="button" role="tab" aria-controls="music-tab-pane" aria-selected="false">Música</button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="education-tab" data-bs-toggle="tab" data-bs-target="#education-tab-pane" type="button" role="tab" aria-controls="education-tab-pane" aria-selected="false">Education</button>
+                                <button class="nav-link" id="education-tab" data-bs-toggle="tab" data-bs-target="#education-tab-pane" type="button" role="tab" aria-controls="education-tab-pane" aria-selected="false">Educação</button>
                             </li>
                         </ul>
                     </div>
@@ -195,28 +200,31 @@
                                     </div>
                                 </div>
 
-                                <div class="tab-pane fade" id="finances-tab-pane" role="tabpanel" aria-labelledby="marketing-tab" tabindex="2">
+                                <div class="tab-pane fade" id="finance-tab-pane" role="tabpanel" aria-labelledby="finance-tab" tabindex="2">
                                     <div class="row">
-                                        <% financesVagas.forEach(vaga => { %>
-                                            <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
-                                                <div class="custom-block bg-white shadow-lg">
-                                                    <a href="/topics-detail/<%= vaga.id_vaga %>">
-                                                        <div class="d-flex">
-                                                            <div>
-                                                                <h5 class="mb-2"><%= vaga.titulo %></h5>
-                                                                <p class="mb-0"><%= vaga.descricao %></p>
+                                        <% if (financesVagas && financesVagas.length > 0) { %>
+                                            <% financesVagas.forEach(vaga => { %>
+                                                <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
+                                                    <div class="custom-block bg-white shadow-lg">
+                                                        <a href="/topics-detail/<%= vaga.id_vaga %>">
+                                                            <div class="d-flex">
+                                                                <div>
+                                                                    <h5 class="mb-2"><%= vaga.titulo %></h5>
+                                                                    <p class="mb-0"><%= vaga.descricao %></p>
+                                                                </div>
                                                             </div>
-                                                            <span class="badge bg-marketing rounded-pill ms-auto"><%= vaga.qtdVagas %></span>
-                                                        </div>
-                                                        <img src="/images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
-                                                    </a>
+                                                            <img src="/images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
+                                                        </a>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        <% }) %>
+                                            <% }) %>
+                                        <% } else { %>
+                                            <p>Não há vagas disponíveis em Finanças.</p>
+                                        <% } %>
                                     </div>
                                 </div>
 
-                                <div class="tab-pane fade" id="music-tab-pane" role="tabpanel" aria-labelledby="marketing-tab" tabindex="3">
+                                <div class="tab-pane fade" id="music-tab-pane" role="tabpanel" aria-labelledby="music-tab" tabindex="3">
                                     <div class="row">
                                         <% musicVagas.forEach(vaga => { %>
                                             <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
@@ -237,7 +245,7 @@
                                     </div>
                                 </div>
 
-                                <div class="tab-pane fade" id="education-tab-pane" role="tabpanel" aria-labelledby="marketing-tab" tabindex="4">
+                                <div class="tab-pane fade" id="education-tab-pane" role="tabpanel" aria-labelledby="education-tab" tabindex="4">
                                     <div class="row">
                                         <% educationVagas.forEach(vaga => { %>
                                             <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
