--- a/SiteCurriculo/telas/index.ejs
+++ b/SiteCurriculo/telas/index.ejs
@@ -58,6 +58,10 @@
                             </li>
 
                             <li class="nav-item">
+                                <a class="nav-link click-scroll" href="/perfil">Seu Currículo</a>
+                            </li>
+
+                            <li class="nav-item">
                                 <a class="nav-link click-scroll" href="/logout">Logout</a>
                             </li>
                         </ul>
@@ -202,7 +206,6 @@
 
                                 <div class="tab-pane fade" id="finance-tab-pane" role="tabpanel" aria-labelledby="finance-tab" tabindex="2">
                                     <div class="row">
-                                        <% if (financesVagas && financesVagas.length > 0) { %>
                                             <% financesVagas.forEach(vaga => { %>
                                                 <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                                     <div class="custom-block bg-white shadow-lg">
@@ -218,9 +221,6 @@
                                                     </div>
                                                 </div>
                                             <% }) %>
-                                        <% } else { %>
-                                            <p>Não há vagas disponíveis em Finanças.</p>
-                                        <% } %>
                                     </div>
                                 </div>
 
